--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta" 
+
 [project]
 name = "industryts"
 version = "1.0"
@@ -7,13 +11,15 @@ authors = [
 ]
 description = "Python library that provides functions to manipulate time series collected from industrial contexts"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-
+dynamic = ["dependencies"]
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 [project.urls]
 "Homepage" = "https://github.com/Industry-Time-Series/industry-ts"
 "Docs" = "https://industry-time-series.github.io/industry-ts/"
