--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,17 +4,14 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        # Semantic version range syntax or exact version of a Python version
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
