--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,7 +3,7 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
+  pytests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
